--- a/project/res/layout/notification.xml
+++ b/project/res/layout/notification.xml
@@ -29,7 +29,7 @@
 		android:layout_toRightOf="@id/notificationIcon"
 		android:id="@+id/notificationText"
 		android:text="App is running"
-		android:textColor="@android:color/primary_text_light"
+		android:textAppearance="@android:style/TextAppearance.StatusBar.EventContent"
 		android:gravity="center_vertical"
 		android:clickable="true"
 		android:paddingLeft="10dp"
