--- a/project/jni/glshim/spec/template/glwrap.h.j2
+++ b/project/jni/glshim/spec/template/glwrap.h.j2
@@ -7,7 +7,7 @@
 #define push_{{ func.name }}({{ func.args|args(0) }}) { \
     {{ func.name }}_PACKED *packed_data = malloc(sizeof({{ func.name }}_PACKED)); \
     packed_data->format = {{ func.name }}_FORMAT; \
-    packed_data->func = {{ func.name }}; \
+    packed_data->func = glshim_{{ func.name }}; \
     {% if func.args %}
     {% for arg in func.args %}
     packed_data->args.a{{ loop.index }} = ({{ arg.type|unconst }}){{ arg.name }}; \
