--- a/project/jni/glshim/spec/template/base/wrap.c.j2
+++ b/project/jni/glshim/spec/template/base/wrap.c.j2
@@ -9,7 +9,7 @@
     {% if not func.void %}return {% endif %}{% block prefix %}wrap{% endblock %}_{{ func.name }}({{ func.args|args(0) }});
     {%- endblock %}
 }
-{{ func.return }} {{ func.name }}({{ func.args|args }}) __attribute__((alias("glshim_{{ func.name }}")));
+{{ func.return }} {{ func.name }}({{ func.args|args }}) __attribute__((alias("glshim_{{ func.name }}"))) __attribute__((visibility("default")));
 {% endblock %}
 {% endfor %}
 {% endblock %}
