--- a/project/jni/gl4es/spec/template/base/wrap.h.j2
+++ b/project/jni/gl4es/spec/template/base/wrap.h.j2
@@ -45,6 +45,7 @@ typedef struct {
 extern void glPushCall(void *data);
 void glPackedCall(const packed_call_t *packed);
 void glIndexedCall(const indexed_call_t *packed, void *ret_v);
+packed_call_t* glCopyPackedCall(const packed_call_t *packed);
 
 {% for func in functions %}
 #define {{ func.name }}_INDEX {{ loop.index }}
@@ -57,7 +58,7 @@ void glIndexedCall(const indexed_call_t *packed, void *ret_v);
 {% endfor %}
 
 {% for func in functions %}
-{{ func.return }} glshim_{{ func.name }}({{ func.name }}_ARG_EXPAND);
+{{ func.return }} gl4es_{{ func.name }}({{ func.name }}_ARG_EXPAND);
 typedef {{ func.return }} (*{{ func.name }}_PTR)({{ func.name }}_ARG_EXPAND);
 {% endfor %}
 
