--- a/project/jni/gl4es/spec/template/eglwrap.c.j2
+++ b/project/jni/gl4es/spec/template/eglwrap.c.j2
@@ -2,7 +2,7 @@
 {% block headers %}
 {{ super() }}
 void *egl_lib;
-#define WARN_NULL(name) if (name == NULL) printf("libGL: warning, " #name " is NULL\n");
+#define WARN_NULL(name) if (name == NULL) printf("LIBGL: warning, " #name " is NULL\n");
 #define LOAD_EGL(type, name, args...)                               \
     typedef type (*eglptr_##name)(args);                            \
     static eglptr_##name egl_##name;                                \
