--- a/project/jni/gl4es/spec/template/gleswrap.c.j2
+++ b/project/jni/gl4es/spec/template/gleswrap.c.j2
@@ -6,6 +6,10 @@
 {% block content %}
 {% include "base/packed_call.j2" %}
 
+/*
+{% include "base/copy_packed_call.j2" %}
+*/
+
 {% endblock %}
 
 {% block definition %}
